# rust_education_homework

./: .gitignore  README.md  flake.nix  rust-toolchain.toml
broken-fizzbuzz/: Cargo.toml
broken-fizzbuzz/src/: main.rs
homework tasks/: 1 - Сломанный FizzBuzz.md  10 - Паттерны проектирования.md  11 - Крейт thiserror.md  12 - Rust паттерны.md  13 - Веб-сервер "умного дома".md  14 - Графический интерфейс "Умной розетки".md  15 - Динамическая библиотека "Умная розетка".md  2 - Умный дом.md  3 - Умный дом №2.md  4 - Делим и тестируем прототип "умного дома".md  5 - Обработка ошибок в прототипе "умного дома".md  6 - Динамический "Умный дом".md  7 - Умная розетка по TCP.md  8 - Термометр по UDP.md  9 - Асинхронное сетевое взаимодействие.md
patterns/: Cargo.toml
patterns/examples/: composite.rs  decorator.rs
patterns/src/composite/: mod.rs
patterns/src/decorator/: mod.rs
patterns_rust/: Cargo.toml
patterns_rust/examples/: new_type.rs  type_state.rs
patterns_rust/src/: lib.rs
smarthome/: .env  Cargo.toml  justfile
smarthome/crates/libs/ffi-plug-socket/: Cargo.toml  build.rs
smarthome/crates/libs/ffi-plug-socket/examples/: ex1.rs
smarthome/crates/libs/ffi-plug-socket/src/: lib.rs
smarthome/crates/libs/measure_units/: Cargo.toml
smarthome/crates/libs/measure_units/src/: generator.rs  lib.rs  power.rs  temperature.rs
smarthome/crates/libs/smarthome/: Cargo.toml
smarthome/crates/libs/smarthome/examples/: main.rs
smarthome/crates/libs/smarthome/src/: lib.rs  providers.rs
smarthome/crates/libs/smarthome/src/devices/: mod.rs  socket.rs  thermometer.rs
smarthome/crates/libs/smarthome/src/location/: home.rs  mod.rs  room.rs
smarthome/crates/libs/smarthome/src/tests/devices/: mod.rs  socket.rs  thermometer.rs
smarthome/crates/libs/smarthome/src/tests/location/: home.rs  room.rs
smarthome/crates/libs/tcp-plug-socket/: Cargo.toml
smarthome/crates/libs/tcp-plug-socket-async/: Cargo.toml
smarthome/crates/libs/tcp-plug-socket-async/examples/: simple_command_sender.rs  tcp_plugsocket_imitator.rs
smarthome/crates/libs/tcp-plug-socket-async/src/: command.rs  error.rs  lib.rs
smarthome/crates/libs/tcp-plug-socket/examples/: scs_async.rs  simple_command_sender.rs  tcp_plugsocket_imitator.rs  tpi.rs  tpi_async.rs
smarthome/crates/libs/tcp-plug-socket/src/: command.rs  error.rs  impl_async.rs  impl_sync.rs  lib.rs  responses.rs
smarthome/crates/libs/udp-thermometer/: Cargo.toml
smarthome/crates/libs/udp-thermometer/examples/: basic_usage.rs  basic_usage_async.rs  thermo_imitator.rs  thermo_imitator_async.rs
smarthome/crates/libs/udp-thermometer/src/: impl_async.rs  impl_sync.rs  lib.rs  temperature.rs
smarthome/crates/libs/udp-thermpmeter-async/: Cargo.toml
smarthome/crates/libs/udp-thermpmeter-async/examples/: basic_usage.rs  thermo_imitator.rs
smarthome/crates/libs/udp-thermpmeter-async/src/: lib.rs
smarthome/crates/services/smarthome-web-server/: Cargo.toml  README.md  request.http
smarthome/crates/services/smarthome-web-server/migrations/: 1_init.down.sql  1_init.up.sql
smarthome/crates/services/smarthome-web-server/src/: app.rs  config.rs  listener.rs  logger.rs  main.rs  models.rs
smarthome/crates/services/smarthome-web-server/src/handlers/: devices.rs  location.rs  mod.rs  room.rs
smarthome/crates/services/smarthome-web-server/src/routes/: devices.rs  location_schema.rs  locations.rs  mod.rs  rooms.rs
smarthome/crates/services/tcp-plug-socket-gui/: Cargo.toml  README.md
smarthome/crates/services/tcp-plug-socket-gui/src/: app.rs  logger.rs  main.rs
smarthome/examples/: main.rs
smarthome/src/: lib.rs  location.rs  providers.rs
smarthome/src/devices/: mod.rs  socket.rs  thermometer.rs
smarthome/src/location/: home.rs  mod.rs  room.rs
smarthome/src/tests/: mod.rs
smarthome/src/tests/devices/: socket.rs  thermometer.rs
smarthome/src/tests/location/: home.rs  mod.rs  room.rs
