[workspace.lints.rust]
# unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace.lints.clippy]
#cargo       = "warn"
all         = "warn"
complexity  = "warn"
correctness = "deny"
nursery     = "warn"
pedantic    = "warn"
perf        = "deny"
style       = "warn"
suspicious  = "warn"

cast_possible_truncation    = "warn"
empty_structs_with_brackets = "warn"

[workspace]
members = [
    # -- Application Libraries
    "crates/libs/smarthome",
    "crates/libs/tcp-plug-socket",
    "crates/libs/tcp-plug-socket-async",
    "crates/libs/udp-thermometer",

    # -- Application Services
    #"crates/services/*",

    # -- Tools
    #"crates/tools/*",
]
resolver = "2"
[workspace.package]
license = "MIT"
# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
#serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
#modql = { version = "0.3.7", features = ["with-sea-query"]}
#derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
