[workspace.lints.rust]
# unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace.lints.clippy]
#cargo       = "warn"
all         = "warn"
complexity  = "warn"
correctness = "deny"
nursery     = "warn"
pedantic    = "warn"
perf        = "deny"
style       = "warn"
suspicious  = "warn"

cast_possible_truncation    = "warn"
empty_structs_with_brackets = "warn"

[workspace]
members = [
    # -- Application Libraries
    "crates/libs/measure_units",
    "crates/libs/smarthome",
    "crates/libs/tcp-plug-socket",
    "crates/libs/udp-thermometer",

    # -- Application Services
    "crates/services/*",

    # -- Tools
    #"crates/tools/*",
]
resolver = "2"
[workspace.package]
license = "MIT"

[workspace.dependencies]
smarthome = { version = "*", path = "crates/libs/smarthome" }
measure_units = { version = "*", path = "crates/libs/measure_units" }

tokio = "^1.36.0"
thiserror = "^1.0.57"
anyhow = "^1.0.80"
derive_more = {version = "^1.0.0-beta", features = ["from", "display"] }
