[package]
edition           = "2021"
license.workspace = true
name              = "tcp-plug-socket"
version           = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# -- App Libs
smarthome = { path = "../../libs/smarthome" }

[lints]
workspace = true
