[package]
edition           = "2021"
license.workspace = true
name              = "tcp-plug-socket"
version           = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
derive_more   = { workspace = true }
measure_units = { workspace = true }
smarthome     = { workspace = true }

anyhow = { workspace = true }
rand = "*"
thiserror = { workspace = true }
tokio = { features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
], workspace = true }

[lints]
workspace = true
