[package]
edition           = "2021"
license.workspace = true
name              = "udp-thermometer"
version           = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smarthome = { path = "../../libs/smarthome" }
[lints]
workspace = true
