[package]
edition           = "2021"
license.workspace = true
name              = "udp-thermometer"
version           = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
measure_units = { path = "../../libs/measure_units" }
smarthome = { path = "../../libs/smarthome" }
thiserror.workspace = true
tokio = { version = "1.36.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }

[dev-dependencies]
anyhow = "1.0.80"

[lints]
workspace = true
