[package]
edition           = "2021"
license.workspace = true
name              = "udp-thermometer"
version           = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
measure_units = { workspace = true }
smarthome = { workspace = true }
thiserror.workspace = true
tokio = { features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] , workspace = true }

[dev-dependencies]
anyhow = "1.0.80"

[lints]
workspace = true
