[package]
name = "smarthome-web-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid","any"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tower = { version = "^0.4", features = ["util", "timeout"] }
tower-http = { version = "^0.5.2", features = ["cors","add-extension", "trace"] }
uuid = { version = "^1.7.0", features = ["serde", "v4"] }
listenfd = "^1.0.1"
rand="*"
serde_yaml = "^0.9"
anyhow.workspace = true
clap = { version = "4.5.1", features = ["derive","env"] }
[lints]
workspace = true
